<resources>
    <string name="app_name">ShiftMate</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="add_new_task">Add New Task</string>
    <string name="focus">Focus</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="quaterly_report">Quaterly Report</string>
    <string name="back">Back</string>
    <string name="task_completedchkbx">Task Completed</string>
    <string name="task_detail_description">Description:</string>
    <string name="enter_focus_session">Enter Focus Session</string>
    <string name="completion_status">Completion Status</string>
    <string name="time_spent_on_task">Time Spent on Task</string>
    <string-array name="role_options">
        <item>Manager</item>
        <item>Finance Manager</item>
        <item>Administrator</item>
        <item>Developer</item>
    </string-array>
    <string name="_1_5_hrs">1,5 hrs</string>
    <string name="project_x_details">Project X Details</string>
    <string name="project_x_details_title">Project X Details</string>
    <string name="app_logo">APP LOGO</string>
    <string name="register">Register</string>
    <string name="register_title">Register</string>
    <string name="back_regLayout">Back</string>
    <string name="name_regLayout">Name</string>
    <string name="password_regLayout">Password</string>
    <string name="register_regLayout">Register</string>
    <string name="surname_regLayout">Surname</string>
    <string name="back_profileLay">Back</string>
    <string name="sam_gmail_com">sam@gmail.com</string>
    <string name="first_name">First Name</string>
    <string name="passHash_profileLay">**************</string>
    <string name="senior_manager">Senior Manager</string>
    <string name="save_profileLay">Save</string>
    <string name="surname_profileLay">Surname</string>
    <string name="title_profileLay">Title</string>
    <string name="task_2">Task 2</string>
    <string name="date_time2">12/03/2024 8hrs</string>
    <string name="date_time3">12/03/2024 8hrs</string>
    <string name="task_3">Task 3</string>
    <string name="shiftmate_title">ShiftMate</string>
    <string name="welcome_back_sam">Welcome back, Sam!!</string>
    <string name="clock_in">Clock-in</string>
    <string name="date_time1">12/03/2024 8hrs</string>
    <string name="task_1">Task 1</string>
    <string name="menu">Menu</string>
    <string name="add_task">Add Task</string>
    <string name="category">New Category</string>
    <string name="selectCat">Select Category</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="date_of_entry">Date of Entry:</string>
    <string name="take_picture">Take Picture</string>
    <string name="save">Save</string>
    <string name="message_1">Sam: Hi team, I hope you are all well. Remember our meeting time is for 14:00 today.</string>
    <string name="message_2">Sandile: Sorry team, but I am unavailable for the meeting today. Jacob has all the information I needed to share.</string>
    <string name="message_3">Jacob: Enjoy the holiday Sandile! See you next week.</string>
    <string name="message_4">You: Hebana, already on holiday?? We just back 2 weeks ago.</string>
    <string name="Todo">TODO</string>
    <string name="Chat_Title">Chat Room</string>
    <string name="back_chatLay">Back</string>
    <string name="type_message">Type Message...</string>
    <string name="added_goal_template">Name: %s, Min Hourly Goal: %s, Max Hourly Goal: %s</string>
    <string name="no_goals_added">No goals added yet.</string>
    <string name="role">Role</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="your_profileTitle">Your Profile</string>
    <string name="todo_userProfilePic">User Profile Picture</string>
    <string name="chat_room">Chat Room</string>
    <string name="leader_board">Leader Board</string>
    <string name="my_goals">My Goals</string>
    <string name="my_profile">My Profile</string>
    <string name="total_hours">Total Hours</string>
    <string name="leader_backBtnText">Back</string>
    <string name="message_5">Sandile: Yes, you want to join? I had booked this off last month already. Check the latest calendar.</string>
    <string name="leader_boardTitle">Leader Board</string>
    <string name="leader_Profile1">UserProfile1</string>
    <string name="leaderProfile3">User Profile3</string>
    <string name="leaderProfile2">User Profile2</string>
    <string name="filter">Filter</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_start_date">Select Start Date</string>
</resources>