<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040">

    <!-- Logo in a small box in the top left corner -->

    <!-- Welcome message -->

    <!-- com.example.shiftmateOPSC.Task list -->

    <ProgressBar
        android:id="@+id/progressBar6"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="278dp"
        android:layout_height="42dp"
        android:pointerIcon="arrow"
        android:progress="50"
        android:progressBackgroundTint="#FF9800"
        android:progressTint="#FF9800"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="92dp"
        android:backgroundTint="@color/material_dynamic_neutral50"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="570dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brawler"
        android:text="30/05/2024"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="588dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="112dp"
        android:layout_height="77dp"
        android:ems="10"
        android:fontFamily="@font/brawler"
        android:inputType="text"
        android:text="Project Z"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="576dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="81dp"
        android:layout_height="22dp"
        android:fontFamily="@font/brawler"
        android:padding="@android:dimen/dialog_min_width_major"
        android:text="30 mins"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="623dp" />

    <ProgressBar
        android:id="@+id/progressBar6"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="278dp"
        android:layout_height="42dp"
        android:pointerIcon="arrow"
        android:progress="8"
        android:progressBackgroundTint="#FF5722"
        android:progressTint="#F44336"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="663dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="92dp"
        android:backgroundTint="@color/material_dynamic_neutral50"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="417dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brawler"
        android:text="09/05/2024"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="435dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="112dp"
        android:layout_height="77dp"
        android:ems="10"
        android:fontFamily="@font/brawler"
        android:inputType="text"
        android:text="Project Y"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="423dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:fontFamily="@font/brawler"
        android:padding="@android:dimen/dialog_min_width_major"
        android:text="2 hrs"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="470dp" />

    <ProgressBar
        android:id="@+id/progressBar6"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="278dp"
        android:layout_height="42dp"
        android:pointerIcon="arrow"
        android:progress="82"
        android:progressBackgroundTint="#4CAF50"
        android:progressTint="#8BC34A"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="510dp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_constraintStart_toStartOf="parent"
        android:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:src="@drawable/ShiftMateLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <!-- Add new task button -->

    <!-- Focus button -->

    <!-- Navigation drawer icon -->

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintStart_toEndOf="@id/logoImageView"
        android:layout_constraintTop_toTopOf="@id/logoImageView"
        android:layout_marginTop="56dp"
        android:text="ShiftMate"
        android:fontFamily="@font/brawler"
        android:textColor="@android:color/white"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintStart_toEndOf="@id/logoImageView"
        android:layout_constraintTop_toTopOf="@id/logoImageView"
        android:layout_marginTop="124dp"
        android:text="Welcome back, Sam!!"
        android:fontFamily="@font/brawler"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintTop_toBottomOf="@id/taskRecyclerView"
        android:backgroundTint="#1D364A"
        android:fontFamily="@font/brawler"
        android:text="@string/add_new_task"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/focusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintTop_toBottomOf="@id/taskRecyclerView"
        android:layout_marginTop="56dp"
        android:backgroundTint="#1D364A"
        android:fontFamily="@font/brawler"
        android:text="@string/focus"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@+id/welcomeTextView"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/focusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintTop_toBottomOf="@id/taskRecyclerView"
        android:backgroundTint="#1D364A"
        android:fontFamily="@font/brawler"
        android:text="Clock-in"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="92dp"
        android:backgroundTint="@color/material_dynamic_neutral50"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brawler"
        android:text="12/03/2024"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:fontFamily="@font/brawler"
        android:padding="@android:dimen/dialog_min_width_major"
        android:text="8hrs"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="317dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="112dp"
        android:layout_height="77dp"
        android:ems="10"
        android:fontFamily="@font/brawler"
        android:inputType="text"
        android:text="Project X"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="270dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:rotation="0"
        android:rotationY="180"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
